<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="400dp"
        app:cardBackgroundColor="@color/Blue"
        app:cardCornerRadius="20dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center">

        <LinearLayout
            android:id="@+id/lLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_horizontal"
            android:layout_marginTop="10dp">


            <LinearLayout
                android:layout_width="140dp"
                android:layout_height="140dp"
                android:background="@drawable/bg"
                android:gravity="center">
                <de.hdodenhof.circleimageview.CircleImageView
                    android:layout_width="wrap_content"
                    android:layout_height="130dp"
                    android:src="@drawable/profile_pictue" />
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/username"
                android:textColor="@color/white"
                android:layout_marginTop="14dp"
                android:textSize="24sp"
                android:fontFamily="@font/gabriela_regular"
                android:textStyle="bold"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/profession"
                android:textColor="@color/white"
                android:textSize="14sp"
                android:fontFamily="@font/gabriela_regular" />
        </LinearLayout>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/lLayout"
                android:layout_centerHorizontal="true"
                >

            <RelativeLayout
                android:id="@+id/r1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                >
                <TextView
                    android:id="@+id/numbers"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/fn"
                    android:layout_centerInParent="true"
                    android:textColor="@color/white"
                    android:textSize="14sp"
                    android:fontFamily="@font/gabriela_regular" />
                <TextView
                    android:id="@+id/followers"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/followers"
                    android:layout_below="@id/numbers"
                    android:textColor="@color/white"
                    android:textSize="14sp"
                    android:fontFamily="@font/gabriela_regular"
                    />
            </RelativeLayout>
                <RelativeLayout
                    android:id="@+id/r2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toEndOf="@+id/r1"
                    android:layout_margin="10dp">
                    <TextView
                        android:id="@+id/numbers2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/fn2"
                        android:layout_centerInParent="true"
                        android:textColor="@color/white"
                        android:textSize="14sp"
                        android:fontFamily="@font/gabriela_regular" />
                    <TextView
                        android:id="@+id/followers2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:text="@string/followings"
                        android:layout_below="@id/numbers2"
                        android:textColor="@color/white"
                        android:textSize="14sp"
                        android:fontFamily="@font/gabriela_regular"
                        />
                </RelativeLayout>
                <RelativeLayout
                    android:id="@+id/r3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:layout_toEndOf="@+id/r2">
                    <TextView
                        android:id="@+id/numbers3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/pnumber"
                        android:layout_centerInParent="true"
                        android:textColor="@color/white"
                        android:textSize="14sp"
                        android:fontFamily="@font/gabriela_regular" />
                    <TextView


                        android:id="@+id/followers3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:text="@string/projects"
                        android:layout_below="@id/numbers3"
                        android:textColor="@color/white"
                        android:textSize="14sp"
                        android:fontFamily="@font/gabriela_regular"
                        />
                </RelativeLayout>

            </RelativeLayout>

        </RelativeLayout>
    </androidx.cardview.widget.CardView>

</RelativeLayout>
